# GeneralType

./: CMakeLists.txt  GeneralType.hpp  LICENSE  README.md  main.cpp
Examples/: basicUsage.cpp  dictionary.cpp  functUsage.cpp
